# Tasky

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: main.yml
api/: function.json
app/: database.py  main.py  models.py  schemas.py  security.py
github/workflows/: main.yml
infra/: main.bicep  main.parameters.json
tests/: test_main.py
